# mcp-kakao-local

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_kakao_local/: __init__.py  __main__.py  kakao_local_client.py  models.py  server.py
